<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityXX"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/TituloXX"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginTop="25sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:gravity="center"
                android:text="@string/ResXX"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_presidente"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                android:gravity="center"
                android:text="@string/TXX1"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:text="@string/PoemaXX1"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_oveja"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                android:gravity="center"
                android:text="@string/TXX2"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:text="@string/PoemaXX2"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                android:gravity="center"
                android:text="@string/TXX3"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:text="@string/PoemaXX3"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnReturnXX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Retornar"
                android:onClick="onClick"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>